@@ -2,26 +2,26 @@
 Hash: SHA256
 
 DIST rackspace-auth-openstack-1.0.tar.gz 6583 SHA256 3ab3de4e3d25a5b5f6014a9c74763f65859d4425cb96c46e5916e7e9718a0791 SHA512 47ef81a4f14e8bed8823a04d1a894e380a86d24b176d49f7d9f076d21f00f489f7851ed390ce4e62399e74e1f39a0c4d242b3f6f4e6c8da54ad7516778c03f1b WHIRLPOOL 8782b023d7ae20686a6f75bd77db2763b6055a33628374c71757f5d97916b0f3d09f688b8407f14909b6d3627133ef31275a9fdbf578c3aa9c4688b153935c33
+DIST rackspace-auth-openstack-1.3.tar.gz 6799 SHA256 c4c069eeb1924ea492c50144d8a4f5f1eb0ece945e0c0d60157cabcadff651cd SHA512 813fe85d38bc80bae65a3f160f50c17fe8bc7279dc3ad4689012b3fa9c0fdd1577c0491de0c87d3b8fe4e6ba5c1166cf30cc1d0533fa15c516a826ef6c36934c WHIRLPOOL 70ba4b3d88fe8be345dec55dcc145b01eb97ba56a87a63ecdaa5f25f38cac3fd5fdba4c6e094fea9e948fb7092ccdb53a15696dc30a734b6be0e5dd9103eab08
 EBUILD rackspace-auth-openstack-1.0.ebuild 609 SHA256 2ad2c5170d7ecb86e496073c4708d5fb3d4537309b1ba07c96a095d57621bf66 SHA512 1a469e41300e8c9d0ba5676e948ab4e719b7c2d4b46579da0894f3691be9e03d74f0095dbbba369c230a689a2a012df807e0dcc91839aa87fd1b94e97e51e43d WHIRLPOOL 5ab36cc6d27c3d7df55e3413f99f6c9b7d5df48e1db88e117d3834d460299acc580ccd6c486b85d0c5e64c847fc3993d00ae6d379c1236fb27564897a0b40b06
+EBUILD rackspace-auth-openstack-1.3.ebuild 617 SHA256 9014dda5502fb43e8d1f247756601dd939e25ee8937c8174dcde3639dfcd963d SHA512 e38ad6b3fdc57013984c05eb7c0ef318cf24e550a56f6fcc42c5c12406906ea8321d365a1f9e0b4cef99fe04b8978605696c95b907eba734be9239306e3122c7 WHIRLPOOL ec2d5c176a98773a23d77166868166b0583e7993da2b6c6e6f7759158147b221745c5a31f9952ea16188a985e98ad9ce7f5741395a36fdcf1ef8d7447892023c
 EBUILD rackspace-auth-openstack-9999.ebuild 641 SHA256 92af0db626e96d031e5131334a58c91c9482975b094503f3e272059fe24d67f3 SHA512 f1661e4cc56be965da131e6ea6b286a4359f23368f7d68e54060a4df7e52e35adc42d452ee21c7e5f03e34ca726cd49e4faa3d18771d739f78f2415a4a218c96 WHIRLPOOL 2cd6e489ad1599b3a4073be2bcdf5e252b958d14767c62b18f38236e235c68eb16c84a4af3d576847059ae66501a4ef5bf561b808325063134e6f283e7dc55f6
-MISC ChangeLog 707 SHA256 fb6b5bdd441812cce5ea87ff3cfca175c8a5f418156c461fe070df5227bd2969 SHA512 6cea09eed8848ac922680f7f7bdbf771c2ccee31e26dd3daeb9b48b3f1e838f1930e0f428f37ad75dcc22add5dfe34d34e9017339c32b5e5271a8174e5c38f02 WHIRLPOOL a78aa2c7ec1283f1a7bef34c93fbb80ebd5a7259c50ddba2878f608016e96e3fdf956afe69d1add0e61a5034d1d9d6d93ad5fc577048a3c81149e1771e98fea1
+MISC ChangeLog 869 SHA256 a04ae3fe5a503197f7cdaf426b30ac0d1eb7f60a30af55a895d6efd42a1f34dd SHA512 28ff54c6bd017d0f1767cdac0c90ddff751dc9375841798c397bfe46d2f3394520b8a3ee6c2b670e196eeba2065babcc264b6ef178a6ba7dcdf3dc641c495901 WHIRLPOOL 805b26176263617ecfd4a7ebace908090c3097808a5441e5f72e2d498cf2a1f0ee5283cb593182b2014e8c2ae84e666d8974ad107230086453e8d84f6e9f3935
 MISC metadata.xml 448 SHA256 370e8b60f1e995a5d9837ac2510f950a358253f54275cfc3ac0b1f388dff0b64 SHA512 5b22edd2f7aafc4df517f915026ccc59316f0cd1d1c51779853c804f494709644bfb9a38b1c5678bdee29e3a74f6fa8f850383cbeafda29a00148357f17f8bd4 WHIRLPOOL 9c9333f206afeae3eb5abfc125080ec32072347232a0ec902f028e0a8416675fff9c28344374418edd83917c15b7294e84735c438b0ce62bc94aa8a5081f5054
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.21 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJSKNKmXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZO1T0P/1hRUJGKi+uLeAHKxQUFZ19f
-dOsmMGHbPwmhhm67VyeA5lXwYo5RAGhAmzL99Zg872WRCmG7zAdtxSuPX3lRtuvR
-Lvd5fQuIkQ4/SIkLM0Aet1k+JAlyyWvD/u3y3tfthml8mJh4/QYBcN9XfMnbGRsh
-skGG10Yozp6461Jdv4Ursb1oB2KlGpSwEqCPN0gAgpg3ApVZhQdW0DU8FpYqkGhF
-YH4ZG8In+B2OhlQmXgC4+QkRBQeRXW05Bacx4dWTydp2C1LOwkhhR7Ef6RoQLsY4
-2c3awWTL7hBZ9fHXpgOm02C29HXOBN5u1uo6a9EvQ+0zRMr84l1S1nThJiftW/Tz
-j0h1aP45U0xCRV5CUW0Ny9LhaKoecJK34tZpWLD9AmeDgXYza5wpvQ3d0ZTDHN2o
-nDO3kkUnEiYdr/IC84aU2Z5yBz+5JN0QYIlzRT9PlI9fq7/Dj3M12K5iOwEP7h5k
-6XFCF0nUoT4Nm3gQYhJ+DzE1c8wJUs3wqESdORuZ/nIUGeE/wi9OGj+ZDEysb+p+
-zTu9woxD3D8HEa21AntVjnKdLpSwGTKGu72BqHVEiEGY68uvQLFAj5ibqmxKCkYW
-zrpxpv9SKipf6MTClXF9aMx9EFyzcwzlyp64CMXLye4G/fvfN5DSwDrtBKHTckR/
-Plg9ke9V1TgIu7sODcNm
-=n0BX
+iQIcBAEBCAAGBQJTcDUOAAoJECRx6z5ArFrDlaUP/3nufPVNmIh5JHlAUIEwGHk+
+d+CilxRfCWDwlHb0x/rPJx4J+gY3wI/JMo9vlzhmIB4DXbsCfBACgifuQyZPsqtk
+gro1KQSv71/vO8yhJDhXFX76auhv6sWzDRA97+G+yM53L6u4w9Gb11sRnLNz9Wa1
+Crb/i1ISAVLktJP2fxD6Trebp9MZdFNRsivJCcu7HTYGDvIUfdv+E9EH7YG4rlQq
+EytvbcbfC/9jNbVo6TemzCDMbQmOE9RWbuSMSNoG3+YqGzO7SslTBI1n/st4uBOM
+Aiu6HYQ+RszGDn7kZF2FBY8Nkc2q7+k1j9yADLMc86W7/mkIF70n47bcH+nmbb7I
+GUV78RJxRyLITNhzVBbQWSqL1A503BVyoGoVCQDv8ZACeexjlk9QicWznaWowIpq
+DGQzJ0dRBAx5uxGVgZVCK2U0+n8ix82YBkuyoZ5zTPLro54cudCf3gym/Lbzzu9a
+xAz8qiDqz1ThK9pkgeLwwNwjT4VKMkWCu/xtzyqixLJcTPG7vfAecmV48YEQfoM2
+USDlyXTSIypIh18fc3mAVI3BE8GkBNV+NSsBxeyMcnHrf7inj+J6epMzmgl3cRtN
+vGXssoj1q6gvaNhhiGUeqNKSRBZ7CUh7jDAunSbJy0MKr8jgTdB0pLSpoVrUJzaI
+7LdoZKhoCHR73Md0R8lu
+=UlLR
 -----END PGP SIGNATURE-----
