@@ -1,0 +1,19 @@
+# Copyright 1999-2014 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/rackspace-auth-openstack/rackspace-auth-openstack-1.3.ebuild,v 1.1 2014/05/12 02:41:40 prometheanfire Exp $
+
+EAPI=5
+PYTHON_COMPAT=( python2_6 python2_7 )
+
+inherit distutils-r1
+
+DESCRIPTION="Rackspace Auth Plugin for OpenStack Clients"
+HOMEPAGE="https://github.com/emonty/rackspace-auth-openstack"
+SRC_URI="mirror://pypi/${PN:0:1}/${PN}/${P}.tar.gz"
+
+LICENSE="Apache-2.0"
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+
+DEPEND="dev-python/setuptools[${PYTHON_USEDEP}]"
+RDEPEND=""
