@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/rackspace-auth-openstack
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/rackspace-auth-openstack/ChangeLog,v 1.2 2013/09/05 18:46:46 mgorny Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/rackspace-auth-openstack/ChangeLog,v 1.3 2014/05/12 02:41:40 prometheanfire Exp $
+
+*rackspace-auth-openstack-1.3 (12 May 2014)
+
+  12 May 2014; Matthew Thode <prometheanfire@gentoo.org>
+  +rackspace-auth-openstack-1.3.ebuild:
+  upgrade!
 
   05 Sep 2013; Michał Górny <mgorny@gentoo.org>
   rackspace-auth-openstack-1.0.ebuild, rackspace-auth-openstack-9999.ebuild:
